minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__data__tests__insert_vertex_edge_vertex.snap
---
source: minigu/gql/parser/src/parser/impls/data.rs
assertion_line: 95
expression: parsed.unwrap()
---
- - - Insert:
        paths:
          - - elements:
                - - Node:
                      variable:
                        - a
                        - start: 8
                          end: 9
                      label:
                        - Label: PERSON
                        - start: 10
                          end: 16
                      predicate:
                        - Property:
                            - - name:
                                  - name
                                  - start: 18
                                    end: 22
                                value:
                                  - Value:
                                      Literal:
                                        String:
                                          kind: Char
                                          literal: A
                                  - start: 24
                                    end: 27
                              - start: 18
                                end: 27
                        - start: 17
                          end: 28
                  - start: 7
                    end: 29
                - - Edge:
                      kind: Right
                      filler:
                        variable: ~
                        label:
                          - Label: KNOWS
                          - start: 32
                            end: 37
                        predicate:
                          - Property:
                              - - name:
                                    - since
                                    - start: 39
                                      end: 44
                                  value:
                                    - Value:
                                        Literal:
                                          Numeric:
                                            Integer:
                                              - kind: Decimal
                                                integer: "2020"
                                              - start: 46
                                                end: 50
                                    - start: 46
                                      end: 50
                                - start: 39
                                  end: 50
                          - start: 38
                            end: 51
                  - start: 29
                    end: 54
                - - Node:
                      variable:
                        - b
                        - start: 55
                          end: 56
                      label:
                        - Label: PERSON
                        - start: 57
                          end: 63
                      predicate:
                        - Property:
                            - - name:
                                  - name
                                  - start: 65
                                    end: 69
                                value:
                                  - Value:
                                      Literal:
                                        String:
                                          kind: Char
                                          literal: B
                                  - start: 71
                                    end: 74
                              - start: 65
                                end: 74
                        - start: 64
                          end: 75
                  - start: 54
                    end: 76
            - start: 7
              end: 76
    - start: 0
      end: 76
- start: 0
  end: 76
